--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=5.5.0",
         "illuminate/support": "~5.0",
-        "illuminate/log": "~5.0"
+        "illuminate/log": "~5.0",
+        "guzzlehttp/guzzle": "^6.1",
     },
     "autoload": {
         "psr-4": {
