--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "illuminate/support": "~5.0",
-        "illuminate/log": "~5.0",
+        "php": ">=5.5.9",
+        "illuminate/support": "5.1.*",
+        "illuminate/log": "5.1.*",
         "guzzlehttp/guzzle": "^6.1",
+        "league/flysystem": "~1.0",
+        "league/flysystem-sftp": "^1.0",
+        "league/flysystem-rackspace": "^1.0"
     },
     "autoload": {
         "psr-4": {
